Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -434,7 +434,6 @@ settings.time.12 = 12h
 settings.time.24 = 24h
 settings.windowTitle = Paramètres
 settings.general = Général
-settings.language=Langue
 settings.general.rememberLastTab = Mémoriser le dernier onglet ouvert
 settings.chat = Chat
 settings.chat.maxMessages = Taille de l'historique du chat
@@ -452,7 +451,6 @@ settings.notifications.enableNotifications = Activer les notifications
 # Toast ?
 settings.notifications.toastPosition = Infobulle de notification
 settings.notifications.toastScreen = Écran
-settings.notifications.displayNotification=Afficher les notifications
 settings.notifications.playSound = Jouer un son
 settings.notifications.pmReceived = MP reçu
 settings.notifications.ranked1v1 = Match 1c1 prêt
@@ -597,3 +595,38 @@ login.serverHost = Serveur
 login.replayServerHost = Serveur de rediffusion
 login.apiBaseUrl = Adresse de l'API
 games.showModdedGames = Afficher les parties moddées
+chat.userContext.copyUsername = Copier
+userInfo.idleTimeFormat = Dernière co \:
+map.playCount = Parties jouées
+map.numberOfDownloads = Téléchargements
+map.versionFormat = v{0}
+settings.appearance = Affichage
+settings.language = Langue
+# Noun
+settings.notifications.toastPreview = Miniature
+settings.notifications.toastPreview.title = Miniature de notification
+settings.notifications.toastPreview.text = Voilà le résultat.
+settings.language.helpUs.text = Le client FAForever de Downlord est un projet communautaire. Si vous souhaitez contribuer à la traduction du client, n'hésitez pas à nous le faire savoir.
+settings.language.helpUs.button = Traduire le client
+settings.chat.chatFormat = Messagerie
+settings.chat.chatFormat.extended = Large
+settings.chat.chatFormat.compact = Compacte
+game.create.onlyFriends = Montrer seulement aux amis
+unknown = inconnnu.e
+dateWithTime = {0] à  {1]
+main.tournaments = Tournois
+tournament.name = Nom
+tournament.status.finished = Terminé
+tournament.status.running = En cours
+tournament.status.openForRegistration = Ouvert
+tournament.status.closedForRegistration = Fermé
+tournament.noStartingDate = Pas de date de début
+tournament.noCompletionDate = Pas de date de fin
+loading = 
+updater.readingFileList = 
+secondAgo = 
+vault.maps.searchError = 
+settings.notifications.displayNotification = Afficher les notifications
+replay.notFoundTitle = 
+replay.replayNotFoundText = 
+settings.notifications.afterGameReview = 
