Update messages_ru.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -426,7 +426,6 @@ settings.time.12 = 12ч
 settings.time.24 = 24ч
 settings.windowTitle = Настройки
 settings.general = Общее
-settings.language=Язык
 settings.general.rememberLastTab = Запомнить последную позицию
 settings.chat = Чат
 settings.chat.maxMessages = Размер истории сообщений в чате
@@ -443,7 +442,6 @@ settings.notifications = Уведомления
 settings.notifications.enableNotifications = Включить уведомления
 settings.notifications.toastPosition = Позиция
 settings.notifications.toastScreen = Экран
-settings.notifications.displayNotification=Показывать уведомление
 settings.notifications.playSound = Проигрывать звуки
 settings.notifications.pmReceived = ЛС получено
 settings.notifications.ranked1v1 = Матч 1 на 1 доступен
@@ -453,7 +451,7 @@ settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = Конфигурация игры
 settings.fa.autoDownloadMaps = Загружать требуемые карты автоматически
 settings.fa.gamePort = Игровой порт
-settings.fa.gameLocation = Путь к игре (например "C\:\\\\Games\\\\Supreme Commander - Forged Alliance\\\\")
+settings.fa.gameLocation = Путь к игре
 settings.fa.executableDecorator = Формат командной строки для исполняемого файла
 settings.fa.executionDirectory = Рабочая папка
 settings.fa.advanced = Продвинутые
@@ -589,3 +587,38 @@ login.serverHost =
 login.replayServerHost = 
 login.apiBaseUrl = 
 games.showModdedGames = 
+chat.userContext.copyUsername = 
+userInfo.idleTimeFormat = 
+map.playCount = 
+map.numberOfDownloads = 
+map.versionFormat = 
+settings.appearance = 
+settings.language = Язык
+# Noun
+settings.notifications.toastPreview = 
+settings.notifications.toastPreview.title = 
+settings.notifications.toastPreview.text = 
+settings.language.helpUs.text = 
+settings.language.helpUs.button = 
+settings.chat.chatFormat = 
+settings.chat.chatFormat.extended = 
+settings.chat.chatFormat.compact = 
+game.create.onlyFriends = 
+unknown = 
+dateWithTime = 
+main.tournaments = 
+tournament.name = 
+tournament.status.finished = 
+tournament.status.running = 
+tournament.status.openForRegistration = 
+tournament.status.closedForRegistration = 
+tournament.noStartingDate = 
+tournament.noCompletionDate = 
+loading = 
+updater.readingFileList = 
+secondAgo = 
+vault.maps.searchError = 
+settings.notifications.displayNotification = Показывать уведомление
+replay.notFoundTitle = 
+replay.replayNotFoundText = 
+settings.notifications.afterGameReview = 
