Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -41,7 +41,7 @@ play.custom = Partie personn.
 play.ranked1v1 = Partie 1c1
 play.coop = Co-op
 leaderboard.failedToLoad = Impossible de charger les classements
-leaderboard.loading = Chargement des classementsu2026
+leaderboard.loading = Chargement des classements…
 coop.host.title = Héberger cette mission
 coop.host.button = Héberger
 coop.leaderboard = Classement
@@ -79,16 +79,16 @@ ranked1v1.ratingHint.top = Félicitations\! Vous faites partie des meilleurs. Pa
 ranked1v1.gamesPlayed = Parties jouées
 ranked1v1.ranking = Votre rang
 ranked1v1.rankingOutOf = sur {0,number,\#} joueurs
-ranked1v1.searching = Recherche d'un adversaireu2026
+ranked1v1.searching = Recherche d'un adversaire…
 ranked1v1.winLossRation = Ratio V/D
 ranked1v1.rankingFormat = \#{0,number,\#}
 ranked1v1.notification.title = Partie classée 1c1 disponible
 ranked1v1.notification.message = Cliquez ici pour ouvrir l'onglet 1c1
 statusBar.chatConnected = Chat connecté
-statusBar.chatConnecting = Connexion au chatu2026
+statusBar.chatConnecting = Connexion au chat…
 statusBar.chatDisconnected = Chat déconnecté
 statusBar.fafConnected = FAForever connecté
-statusBar.fafConnecting = Connection à FAForever u2026
+statusBar.fafConnecting = Connection à FAForever …
 statusBar.fafDisconnected = FAForever déconnecté
 statusBar.reconnect = Reconnecter
 statusBar.taskWithoutMessage.format = {0}
@@ -97,8 +97,8 @@ news.authoredFormat = {0} le {1,date}
 chat.noOpenChats = Aucun chat ouvert
 chat.joinAChannel = Rejoindre un canal
 chat.channelNamePrompt = ex \: \#aeolus
-chat.messagePrompt = Écrivez un message2026
-chat.searchPrompt = Rechercher2026
+chat.messagePrompt = Écrivez un message…
+chat.searchPrompt = Rechercher…
 chat.category.moderators = Modérateurs
 chat.category.friends = Amis
 chat.category.foes = Ennemis
@@ -116,14 +116,14 @@ chat.userContext.viewLiveReplay = Regarder
 chat.userContext.joinGame = Rejoindre
 chat.userContext.viewReplays = Voir les rediffusions
 chat.userContext.inviteToGame = Inviter
-chat.userContext.kick = Éjecteru2026
-chat.userContext.ban = Banniru2026
-chat.sendMessageTask.title = Envoyer un messageu2026
+chat.userContext.kick = Éjecter…
+chat.userContext.ban = Banniru…
+chat.sendMessageTask.title = Envoyer un message…
 # Not sure I understood what the string meant. "Send a chat action" ? What is it precisely ?
 # Fuzzy
-chat.sendActionTask.title = Exécuter une actionu2026
+chat.sendActionTask.title = Exécuter une action…
 chat.clanTagFormat = [{0}]
-chat.imageUploadTask.title = Envoyer une imageu2026
+chat.imageUploadTask.title = Envoyer une image…
 chat.userCount = {0,number,\#} joueurs
 chat.mapName = Carte
 chat.filter.filter = Filtre
@@ -167,7 +167,7 @@ game.create.rating = Niveau demandé
 game.create.deselectAll = Tout déselectionner
 game.create.reload = Actualiser
 game.create.create = Créer
-game.create.searchMap = Rechercheru2026
+game.create.searchMap = Rechercher…
 game.create.gameType = Mode de jeu
 game.create.mods = Mods
 game.create.titleMissing = Titre manquant
@@ -248,7 +248,7 @@ game.idFormat = \ \#{0,number,\#}
 game.lineUp = Composition
 featuredMod.displayName = Nom du mod
 featuredMod.technicalName = Abrév. mod
-ladder.searchPrompt = Chercher rang ou joueuru2026
+ladder.searchPrompt = Chercher rang ou joueur…
 login.title = Connexion FA Forever
 login.name = Nom d'utilisateur
 login.password = Mot de passe
@@ -257,37 +257,37 @@ login.create = Créer un compte
 login.forgot = Identifiants oubliés
 login.button.login = Connexion
 login.button.cancel = Annuler
-login.progress.message = Connexion en coursu2026
+login.progress.message = Connexion en cours…
 vault.maps = Cartes
 vault.mods = Mods
 vault.onlineReplays = Rediffusions en ligne
 vault.localReplays = Rediffusions locales
 vault.liveReplays = Parties en cours
-vault.replays.loading = Chargement des rediffusionsu2026
+vault.replays.loading = Chargement des rediffusions…
 vault.replays.newest = Plus récent
 vault.replays.highestRated = Meilleure note
 vault.replays.displayQuery = Afficher la requête
 vault.replays.queryPrompt = Formez une requête à l'aide du panneau ci-dessus ou écrivez-la manuellement.
 vault.replays.searchError = Une erreur est survenue lors de la recherche d'une rediffusion.
-vault.more = Plusu2026
+vault.more = Plus…
 modVault.newestMods = Plus récent
 modVault.install = Installer
 modVault.uninstall = Désinstaller
 modVault.installationFailed = Impossible de charger {0} \: {1}
 modVault.couldNotDeleteMod = Impossible de supprimer {0} \: {1}
-modVault.loadingMods = Chargement des modsu2026
+modVault.loadingMods = Chargement des mods…
 modVault.upload.chooseDirectory = Sélectionner l'emplacement du mod
-modVault.upload = Envoyer un modu2026
+modVault.upload = Envoyer un mod…
 modVault.upload.title = Envoyer un mod
 modVault.upload.hint = Les valeurs sont obtenues depuis "mod_info.lua"
 modVault.upload.modVersion = Version
 modVault.upload.modUid = UID
 modVault.upload.uploadNow = Envoyer
-modVault.upload.uploading = Envoi en coursu2026
+modVault.upload.uploading = Envoi en cours…
 modVault.upload.complete = Envoi terminé
 modVault.upload.failed = Impossible d'envoyer le mod. Le serveur a renvoyé l'erreur suivante \:\n\n{0}
 modVault.upload.retry = Réessayer
-modVault.upload.compressing = Compression du modu2026
+modVault.upload.compressing = Compression du mod…
 mapVault.upload.title = Envoyer une carte
 mapVault.upload.hint = Les valeurs sont obtenues depuis " *_scenario.lua "
 mapVault.upload.mapVersion = Version
