Update messages_de.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -38,7 +38,7 @@ play.custom = Benutzerdefinierte Spiele
 play.ranked1v1 = 1v1 Spiel
 play.coop = Co-Op
 leaderboard.failedToLoad = Rangliste konnte nicht geladen werden
-leaderboard.loading = Lade Ranglisteu2026
+leaderboard.loading = Lade Rangliste…
 coop.host.title = Diese Mission spielen
 coop.host.button = Spiel hosten
 coop.leaderboard = Rangliste
@@ -72,16 +72,16 @@ ranked1v1.ratingHint.top = Glückwunsch\! Du bist ein Spitzenspieler. Teile dein
 ranked1v1.gamesPlayed = Gespielte Spiele
 ranked1v1.ranking = Dein Rang
 ranked1v1.rankingOutOf = von {0,number,\#} Spielern
-ranked1v1.searching = Suche nach Gegneru2026
+ranked1v1.searching = Suche nach Gegner…
 ranked1v1.winLossRation = Gewonnen/Verloren Verhältnis
 ranked1v1.rankingFormat = \#{0,number,\#}
 ranked1v1.notification.title = 1v1 Spiel verfügbar
 ranked1v1.notification.message = Klicke hier, um die 1v1 Ansicht zu öffnen
 statusBar.chatConnected = Chat verbunden
-statusBar.chatConnecting = Verbinde mit Chatu2026
+statusBar.chatConnecting = Verbinde mit Chat…
 statusBar.chatDisconnected = Chat getrennt
 statusBar.fafConnected = FAF verbunden
-statusBar.fafConnecting = Verbinde mit FAFu2026
+statusBar.fafConnecting = Verbinde mit FAF…
 statusBar.fafDisconnected = FAF getrennt
 statusBar.reconnect = Erneut verbinden
 statusBar.taskWithoutMessage.format = {0}
@@ -90,8 +90,8 @@ news.authoredFormat = {0} am {1,date}
 chat.noOpenChats = Keine offenen Chats
 chat.joinAChannel = Trete einem Kanal bei
 chat.channelNamePrompt = z. B. \#aeolus
-chat.messagePrompt = Schreibe eine Nachrichtu2026
-chat.searchPrompt = Sucheu2026
+chat.messagePrompt = Schreibe eine Nachricht…
+chat.searchPrompt = Suche…
 chat.category.moderators = Moderatoren
 chat.category.friends = Freunde
 chat.category.foes = Foes
@@ -109,12 +109,12 @@ chat.userContext.viewLiveReplay = Dem Spiel zuschauen
 chat.userContext.joinGame = Spiel beitreten
 chat.userContext.viewReplays = Zeige replays
 chat.userContext.inviteToGame = Zu Spiel einladen
-chat.userContext.kick = Kickenu2026
-chat.userContext.ban = Bannenu2026
-chat.sendMessageTask.title = Sende Chat Nachrichtu2026
-chat.sendActionTask.title = Sende Chat Aktionu2026
+chat.userContext.kick = Kicken…
+chat.userContext.ban = Bannen…
+chat.sendMessageTask.title = Sende Chat Nachricht…
+chat.sendActionTask.title = Sende Chat Aktion…
 chat.clanTagFormat = [{0}]
-chat.imageUploadTask.title = Lade Bild hochu2026
+chat.imageUploadTask.title = Lade Bild hoch…
 chat.userCount = {0,number,\#} Benutzer (Tippe um zu suchen)
 chat.mapName = Kartenname\: {0}
 chat.filter.filter = Filter
@@ -157,7 +157,7 @@ game.create.rating = Erwünschtes Rating
 game.create.deselectAll = Alle abwählen
 game.create.reload = Neu laden
 game.create.create = Erstellen
-game.create.searchMap = Suchenu2026
+game.create.searchMap = Suchen…
 game.create.gameType = Spieltyp
 game.create.mods = Mods
 game.create.titleMissing = Titel fehlt
@@ -235,7 +235,7 @@ game.idFormat = \#{0,number,\#}
 game.lineUp = Aufstellung
 featuredMod.displayName = Name der Spiel-Mod
 featuredMod.technicalName = Kurzname der Spiel-Mod
-ladder.searchPrompt = Suche Rang oder Spieleru2026
+ladder.searchPrompt = Suche Rang oder Spieler…
 login.title = FA Forever Anmeldung
 login.name = Benutzername
 login.password = Passwort
@@ -244,45 +244,45 @@ login.create = Konto erstellen
 login.forgot = Anmeldedaten vergessen
 login.button.login = Anmelden
 login.button.cancel = Abbrechen
-login.progress.message = Anmeldenu2026
+login.progress.message = Anmelden…
 vault.maps = Karten
 vault.mods = Mods
 vault.onlineReplays = Online Replays
 vault.localReplays = Lokale Replays
 vault.liveReplays = Live Replays
-vault.replays.loading = Lade Replaysu2026
+vault.replays.loading = Lade Replays…
 vault.replays.newest = Am neuesten
 vault.replays.highestRated = Am höchsten bewertet
 vault.replays.displayQuery = Suchanfrage anzeigen
 vault.replays.queryPrompt = Stelle oben eine Suchanfrage zusammen oder erfasse sie manuell
 vault.replays.searchError = Bei der Replay-Suche ist ein Fehler aufgetreten.
-vault.more = Moreu2026
+vault.more = More…
 modVault.newestMods = Neuste Mods
 modVault.install = Installieren
 modVault.uninstall = Deinstallieren
 modVault.installationFailed = Mod ''{0}'' konnte nicht installiert werden\: {1}
 modVault.couldNotDeleteMod = Mod ''{0}'' konnte nicht gelöscht werden\: {1}
-modVault.loadingMods = Lade Modsu2026
+modVault.loadingMods = Lade Mods…
 modVault.upload.chooseDirectory = Wähle den Speicherort der Mod
-modVault.upload = Mod hochladenu2026
+modVault.upload = Mod hochladen…
 modVault.upload.title = Mod hochladen
 modVault.upload.hint = Werte werden aus mod_info.lua gelesen
 modVault.upload.modVersion = Version
 modVault.upload.modUid = UID
 modVault.upload.uploadNow = Jetzt hochladen
-modVault.upload.uploading = Mod wird hochgeladenu2026
+modVault.upload.uploading = Mod wird hochgeladen…
 modVault.upload.complete = Hochladen abgeschlossen
 modVault.upload.failed = Mod konnte nicht hochgeladen werden. Der Server meldete folgende Fehler\:\n\n{0}
 modVault.upload.retry = Erneut versuchen
-modVault.upload.compressing = Komprimiere Modu2026
+modVault.upload.compressing = Komprimiere Modu…
 mapVault.upload.title = Karte hochladen
 mapVault.upload.hint = Werte wurden aus *_scenario.lua gelesen
 mapVault.upload.mapVersion = Version
-mapVault.upload.reading = Lese Karteu2026
-mapVault.upload = Karte hochladenu2026
+mapVault.upload.reading = Lese Karte…
+mapVault.upload = Karte hochladen…
 mapVault.upload.uploadNow = Jetzt hochladen
-mapVault.upload.uploading = Karte wird hochgeladenu2026
-mapVault.upload.compressing = Komprimiere Karteu2026
+mapVault.upload.uploading = Karte wird hochgeladen…
+mapVault.upload.compressing = Komprimiere Karte…
 mapVault.upload.complete = Hochladen abgeschlossen
 mapVault.upload.complete.hint = WARNUNG\: Da der Server deine Dateien möglicherweise umbenannt hat, wird dringend empfohlen, deine Map zu entfernen und sie stattdessen via Vault zu installieren.
 mapVault.upload.failed = Karte konnte nicht hochgeladen werden. Der Server meldete folgende Fehler\:\n\n{0}
@@ -293,7 +293,7 @@ mapVault.upload.sizeFormat = {0,number,\#}km x {1,number,\#}km
 mapVault.upload.playersFormat = {0,number,\#}
 mapVault.upload.rankedConfirm = Ich bestätige, dass die Karte ausgeglichen ist und keinen verbotenen Code enthält. Ich bin mir bewusst, dass ein Verstoß einen Bann zur Folge hat. Beim Abwählen dieser Option werden Spiele auf dieser Karte nicht bewertet.
 mapVault.upload.retry = Erneut versuchen
-mapVault.loadingMaps = Lade Kartenu2026
+mapVault.loadingMaps = Lade Karten…
 mapVault.mostLikedMaps = Am beliebtesten
 mapVault.newestMaps = Am neuesten
 mapVault.mostPlayed = Am meisten gespielt
@@ -323,9 +323,9 @@ map.updatedDateTime = Aktualisiert
 mapPreview.name = Kartenname\: {0}
 mapPreview.size = Kartengröße\: {0,number,\#}km x {1,number,\#}km
 mapPreview.loadFailure.message = Kartenvorschau konnte nicht geladen werden
-replays.loadingOnlineTask.title = Lade Online-Replaysu2026
+replays.loadingOnlineTask.title = Lade Online-Replays…
 replays.loadingOnlineTask.failed = Online-Replays konnten nicht geladen werden.
-replays.loadingLocalTask.title = Lade lokale Replaysu2026
+replays.loadingLocalTask.title = Lade lokale Replays…
 replays.loadingLocalTask.failed = Lokale Replays konnten nicht geladen werden.
 replays.live.loadFailure.title = Live-Replays konnten nicht geladen werden
 replays.live.loadFailure.message = Das Live-Replay konnte nicht gestartet werden
@@ -333,7 +333,7 @@ tutorial.map = Karte
 tutorial.title = Titel
 tutorial.length = Länge
 tutorial.description = Beschreibung
-chat.connecting.message = Verbinde mit Chatu2026
+chat.connecting.message = Verbinde mit Chat…
 updater.binary.taskTitle = Bereite Spieldateien vor
 clientUpdateAvailable.notification = Client {0} ist verfügbar ({1})
 clientUpdateAvailable.downloadAndInstall = Herunterladen
@@ -348,7 +348,7 @@ mapReplayTask.title = Lade Replay {0} herunter
 downloadingModTask.downloading = Lade Mod {0} herunter
 downloadingModTask.unzipping = Entpacke Mod nach {0}
 missingGamePath.notification = Forged Alliance konnte nicht gefunden werden
-missingGamePath.locate = Lokalisierenu2026
+missingGamePath.locate = Lokalisieren…
 missingGamePath.chooserTitle = Wähle dein Forged Alliance Verzeichnis
 notifications.empty = Du hast keine Benachrichtigungen
 stats.air = Luft
@@ -380,7 +380,7 @@ user.status.waiting = Wartet in\: {0}
 user.status.playing = Spielt\: {0}
 achievement.stepsFormat = {0,number,\#}/{1,number,\#}
 achievements.mostRecent = Neuste Errungenschaften
-achievements.loading = Lade Errungenschaftenu2026
+achievements.loading = Lade Errungenschaften…
 achievements.unlocked = Freigeschaltet ({0,number,\#})
 achievements.locked = Offen ({0,number,\#})
 replayServer.listeningFailed = Replay-Server konnte nicht auf Port {0,number,\#} gestartet werden
@@ -453,7 +453,7 @@ settings.fa.executableDecorator = Kommandozeilenformat für die Ausführbare Dat
 settings.fa.executionDirectory = Ausführungsverzeichnis
 settings.fa.advanced = Fortgeschritten
 settings.fa.useDefault = Benutze Standardverzeichnis
-settings.fa.chooseDirectory = Wähleu2026
+settings.fa.chooseDirectory = Wähle…
 settings.general.theme = Stil
 settings.notifications.friendOnline = Freund online
 settings.notifications.friendJoinsGame = Freund tritt Spiel bei
@@ -468,7 +468,7 @@ settings.account.newPassword = Neues Passwort
 settings.account.newPassword.empty = Neues Passwort darf nicht leer sein.
 settings.account.confirmPassword = Passwort bestätigen
 settings.account.confirmPassword.mismatch = Du hast zwei unterschiedliche Passwörter eingegeben.
-settings.account.changePassword.changing = Dein Passwort wird geändertu2026
+settings.account.changePassword.changing = Dein Passwort wird geändert…
 settings.account.changePassword.success = Dein Passwort wurde geändert.
 settings.account.changePassword.error = Dein Passwort wurde aufgrund eines Fehlers nicht geändert ({0}).
 settings.account.steamAccount = Steam-Konto Verknüpfen
@@ -541,7 +541,6 @@ settings.chat.notifications = Benachrichtigungen
 mod.displayName = Name
 mod.author = Autor
 # "Hinzugefügt" doesn't mean "Uploaded" but "Added".
-# Fuzzy
 mod.uploadedDateTime = Hinzugefügt
 mod.updatedDateTime = Aktualisiert
 mod.id = ID
@@ -589,9 +588,43 @@ login.apiBaseUrl = API Basis-URL
 games.showModdedGames = Zeige Spiele mit Mods
 chat.userContext.copyUsername = Kopiere Benutzernamen
 userInfo.idleTimeFormat = Zuletzt gesehen\: {0}
+map.playCount = Anzahl Spiele
+# Bin persönlich der Meinung, dass gewisse Begriffe nicht übersetzt werden sollten/müssen.
+# Kann auch `Heruntergeladen` sein, allerdings ist Downloads simpler und besser meiner Meinung nach.
+# Fuzzy
+map.numberOfDownloads = Downloads
+# @downlord muss dieses Feld übersetzt werden?
+map.versionFormat = v{0}
+settings.appearance = Anzeige
 settings.language = Sprache
+# Noun
+settings.notifications.toastPreview = Vorschau
+settings.notifications.toastPreview.title = Popup Vorschau
+settings.notifications.toastPreview.text = So sieht es aus.
+settings.language.helpUs.text = Die Übersetzung von Downlord's Client ist ein Gemeinschaftsprojekt. Wenn du eine Übersetzung in eine andere Sprache haben wünscht, dann würden wir uns über Deine Hilfe freuen.
+settings.language.helpUs.button = Hilf bei der Übersetzung
 settings.chat.chatFormat = Chatformat
 settings.chat.chatFormat.extended = Erweitert
 settings.chat.chatFormat.compact = Kompakt
 game.create.onlyFriends = Nur Freunden anzeigen
+unknown = unbekannt
+dateWithTime = {0} um {1}
+main.tournaments = Turniere
+tournament.name = Name
+tournament.status.finished = Beendet
+tournament.status.running = In Ausführung
+# Fuzzy
+tournament.status.openForRegistration = Offen
+# Fuzzy
+tournament.status.closedForRegistration = Registrierung abgeschlossen
+tournament.noStartingDate = Beginn unbekannt
+tournament.noCompletionDate = Nicht abgeschlossen
+loading = Lädt...
+updater.readingFileList = Lese Dateiliste
+secondAgo = Vor {0,number,\#}  Sekunden
+# Wie nennen wir Maps auf Deutsch?
+vault.maps.searchError = Karten konnten nicht geladen werden
 settings.notifications.displayNotification = Zeige Benachrichtigung
+replay.notFoundTitle = Könnte Spiel nicht finden
+replay.replayNotFoundText = Könnte Spiel mit id "{0}" nicht finden.
+settings.notifications.afterGameReview = Review nach Spiel
