Improve user experience and performance of tournaments tab
Fixes #996

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -643,3 +643,7 @@ tournament.status.openForRegistration=Open
 tournament.status.closedForRegistration=Closed
 tournament.noStartingDate=no starting date set
 tournament.noCompletionDate=not completed yet
+tournament.openOnChallonge=Open on challonge.com
+tournament.gameType=Game type:
+tournament.startingAt=Starting at:
+tournament.completedAt=Completed at:
