--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -603,10 +603,10 @@ game.notValid=The Game was not rated
 game.notRatedYet=Rating change is not yet available
 game.ended=Did you enjoy "{0}"? Let other people know!
 game.rate=Rate it now
-tiles.comparator.playersDescending=Sorty by Players Descending
-tiles.comparator.playersAscending=Sorty by Players Ascending
-tiles.comparator.nameDescending=Sorty by Names Descending
-tiles.comparator.nameAscending=Sorty by Names Ascending
+tiles.comparator.playersDescending=Sort by Players Descending
+tiles.comparator.playersAscending=Sort by Players Ascending
+tiles.comparator.nameDescending=Sort by Names Descending
+tiles.comparator.nameAscending=Sort by Names Ascending
 search.sort.ascending=ascending
 search.sort.descending=descending
 query.contains=contains
