Implement Galactic War game hosting

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -677,3 +677,7 @@ game.couldNotJoin=Could not join game with id id ''{0}''.
 discord.disallowJoins=Disallow players joining via Discord
 replay.couldNotOpen=Replay with id ''{0}'' , could not be opened.
 error.game.notTerminatedCorrectly=The game did not terminate correctly and has still certain files open. Some files from the installed game could not be copied over to FAF but unless you recently modified game files in the installed version you probably do not care. We are still starting the game for you.
+
+galacticWar.failedLaunching=Tried starting Galactic War Game but failed launching.
+galacticWar.notLaunchedDueToGameSearchRunning=Galactic War requested a game launch however this is not possible because you are searching for a ladder game or are currently joining a game.
+galacticWar.canNotLaunchGameRunning=Can not launch Galactic War because a Forged Alliance game process is still running.
