--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -683,6 +683,15 @@ tournament.status.openForRegistration=Open for registration
 tournament.status.closedForRegistration=Closed for registration
 tournament.noStartingDate=no starting date set
 tournament.noCompletionDate=not completed yet
+main.tutorials=Tutorials
+tutorial.category=category
+tutorial.tutorial=Tutorials
+tutorial.launch=Launch Tutorials
+tutorial.mapName=Map name: {0}
+tutorial.launchFailed=Launching Tutorial failed
+mapVault.installationFailed=Map installation failed for map ''{0}'' with message ''{1}''
+tutorial.loading=Loading tutorials
+tutorial.noneAvailable=There are currently no tutorials
 mapVault.owned=Owned Maps
 map.hidden=Hidden
 map.hide=Hide
