u00200 instead of Whitespace in Leaderboard Co-Op Fixes Text Seperator in languages other than english. It was missing the Backslash before the unicode definition or was without it (just a space instad of \u0020)
Fixes #1116

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -396,7 +396,7 @@ duration.hourMinutes = {0,number,\#}h {1,number,\#}min
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = \ vs 
 # suppress inspection "TrailingSpacesInProperty"
-textSeparator = , 
+textSeparator=,\u0020
 secondsAgo = před {0,number,\#} sekundami
 minuteAgo = před {0,number,\#} minutou
 minutesAgo = před {0,number,\#} minuty
