--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -399,7 +399,7 @@ duration.hourMinutes = {0,number,\#}h {0,number,\#}min
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = u0020vsu0020
 # suppress inspection "TrailingSpacesInProperty"
-textSeparator = ,u0020
+textSeparator=,\u0020
 secondsAgo = Vor {0,number,\#} Sekunden
 minuteAgo = Vor {0,number,\#} Minute
 minutesAgo = Vor {0,number,\#} Minuten
