--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -414,7 +414,7 @@ duration.hourMinutes = {0,number,\#}h {1,number,\#}min
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = u0020contreu0020
 # suppress inspection "TrailingSpacesInProperty"
-textSeparator = ,u0020
+textSeparator=,\u0020
 secondsAgo = Il y a {0,number,\#} secondes
 minuteAgo = Il y a {0,number,\#} minute
 minutesAgo = Il y a {0,number,\#} minutes
