--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -402,7 +402,7 @@ duration.hourMinutes = {0,number,\#}ч {1,number,\#}мин
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = \ против 
 # suppress inspection "TrailingSpacesInProperty"
-textSeparator = , 
+textSeparator=,\u0020
 secondsAgo = {0,number,\#} секунд назад
 minuteAgo = {0,number,\#} минуту назад
 minutesAgo = {0,number,\#} минут назад
