--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -345,7 +345,7 @@ duration.hourMinutes = {0,number,\#}小时{1,number,\#}分钟
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = 对
 # suppress inspection "TrailingSpacesInProperty"
-textSeparator = ，
+textSeparator=,\u0020
 secondsAgo = {0,number,\#}秒前
 minuteAgo = {0,number,\#}分钟前
 minutesAgo = {0,number,\#}分钟前
