Show name of coop mission
Adds it to game table
Fixes #1091

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -653,3 +653,4 @@ tournament.openOnChallonge=Open on challonge.com
 tournament.gameType=Game type:
 tournament.startingAt=Starting at:
 tournament.completedAt=Completed at:
+game.missionName=Mission
