Fix sorting of Tournaments
Fixes #1113

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -642,8 +642,8 @@ settings.notifications.afterGameReview=After game review
 tournament.name=Name
 tournament.status.finished=Finished
 tournament.status.running=Running
-tournament.status.openForRegistration=Open
-tournament.status.closedForRegistration=Closed
+tournament.status.openForRegistration=Open for registration
+tournament.status.closedForRegistration=Closed for registration
 tournament.noStartingDate=no starting date set
 tournament.noCompletionDate=not completed yet
 mapVault.owned=Owned Maps
