--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -258,6 +258,10 @@ game.idFormat=#{0,number,#}
 game.lineUp=Line-up
 game.mapGeneration.notification.title=Generating map...
 game.mapGeneration.notification.message=Please stand by. (Version: {0}, Seed: {1})
+game.mapGeneration.failed.title=Map generation failed.
+game.mapGeneration.failed.message=The requested map could not be generated, the map generation process did not terminate within timeout. Killing process.
+game.mapGeneration.downloadGenerator.title=Downloading map generator version {0}
+game.mapGeneration.generateMap.title=Generating map... (Version: {0}, Seed: {1})
 featuredMod.displayName=Game mod name
 featuredMod.technicalName=Game mod short name
 ladder.searchPrompt=Search rank or player…
