Add "not contains"
Add "not contains" comparator to vault search
Fixes #925

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -658,3 +658,4 @@ tournament.gameType=Game type:
 tournament.startingAt=Starting at:
 tournament.completedAt=Completed at:
 game.missionName=Mission
+query.notContains=not contains
