Dont throw exception but display unknown mission
Prepares #1134

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -50,6 +50,7 @@ play.coop=Co-Op
 
 leaderboard.failedToLoad=Leaderboard could not be loaded
 leaderboard.loading=Loading leaderboard…
+coop.unknownMission=Unknown mission
 coop.host.title=Host this Mission
 coop.host.button=Host Game
 coop.leaderboard=Leaderboard
