no background image button add a button to the settings to allow the user to set no background image

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -527,6 +527,7 @@ settings.fa.advanced=Advanced
 settings.fa.useDefault=Use default directory
 settings.fa.chooseDirectory=Choose…
 settings.general.theme=Theme
+settings.general.theme.useNoImage=No image
 settings.notifications.friendOnline=Friend online
 settings.notifications.friendJoinsGame=Friend joins game
 settings.notifications.friendPlaysGame=Friend plays game
