Add start time column to live replay tab
We also sort games from most to least recent.  This really helps gauge
if a given replay is worth watching.

Signed-off-by: Igor Kotrasinski <i.kotrasinsk@gmail.com>

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -187,6 +187,7 @@ game.create.featuredModMissing=Game type is missing
 game.create.failed=Game could not be created.
 game.rehost.failed=Rehosting game failed.
 game.title=Title
+game.startTime=Start time
 game.players=Players
 game.map=Map
 game.rating=Rating
