Better order of vault search options
Fixes #1169

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -216,7 +216,7 @@ game.gameStatus=Game status
 game.gameStatus.playing=Playing
 game.gameStatus.lobby=Waiting for game to start
 game.gameStatus.none=None
-game.id=ID
+game.id=Replay ID
 game.time=When
 game.duration=Duration
 game.gameType=Game type
@@ -628,7 +628,8 @@ userInfo.statistics.errorLoading=Could not load statistics
 settings.general.unitDatabase=Unit database
 unitDatabase.rackover=Rackover
 unitDatabase.spooky=Spooky
-game.player.rating=One of the player's ratings
+game.player.globalRating=One of the player's global ratings
+game.player.ladderRating=One of the player's ladder ratings
 
 mapVault.ladder=Ladder maps
 news.showLadderMaps=Show ladder maps
