add reveal replay and game.prefs location button to menu
closes #1229

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -32,6 +32,8 @@ menu.settings=Settings
 menu.revealMapFolder=Reveal map folder
 menu.revealLogFolder=Reveal log folder
 menu.revealModFolder=Reveal mod folder
+menu.revealReplayFolder=Reveal replay folder
+menu.revealGamePrefsFile=Reveal game.prefs file
 
 main.community.news=News
 main.chat=Chat
