rework custom games tab/card tiles, allow sidePane to be hidden
closes #1228

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -22,6 +22,8 @@ dateWithTime={0} at {1}
 
 view.tiles=Tiles
 view.table=Table
+view.showSidePane=Show details
+view.hideSidePane=Hide details
 
 userMenu.logOut=Log out
 userMenu.showProfile=Show profile
@@ -166,8 +168,8 @@ chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
 games.create=Create game
 games.create.minRating=Min.
 games.create.maxRating=Max.
-games.showPasswordProtectedGames=Show password protected games
-games.showModdedGames=Show games with mods
+games.showPasswordProtectedGames=Show private games
+games.showModdedGames=Show modded games
 games.noGamesAvailable=There are no open games. Why don't you create one?
 games.couldNotJoin=Game could not be joined. See error message below.
 game.create.connecting=Waiting for connection
@@ -203,6 +205,7 @@ game.type=Type
 game.mods=Mods
 game.players.format={0,number,#}/{1,number,#}
 game.detail.players.format={0,number,#}/{1,number,#} players
+game.avgRating.format={0,number,#}
 game.join=Join
 game.cancel=Cancel
 game.host=Host
