--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -682,3 +682,8 @@ discord.disallowJoins=Disallow players joining via Discord
 replay.couldNotOpen=Replay with id ''{0}'' , could not be opened.
 error.game.notTerminatedCorrectly=The game did not terminate correctly and has still certain files open. Some files from the installed game could not be copied over to FAF but unless you recently modified game files in the installed version you probably do not care. We are still starting the game for you.
 map.id=#{0}
+revert.alreadySymlinked=Revert this I got it symlinked
+mapDir.changed.noneAscii=We detected you have a username with special characters and moved your vault directory to fallback location.
+mapDir.changed.unix=We detected you have a unix system and moved your vault directory to fallback location.
+mapDir.changed.oneDrive=We detected you use OneDrive for your documents and moved your vault directory to fallback location.
+settings.use.secondaryVaultLocation=Use Fallback vault location. You want to use this if map/mod downloading has issues and the game doe not find maps/mods.
