Add force relay option, remove port option
Closes #1279

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -533,7 +533,7 @@ settings.sounds.enable=Enable sounds
 settings.fa.title=Forged Alliance Forever
 settings.fa.gameConfiguration=Game configuration
 settings.fa.autoDownloadMaps=Download missing maps automatically
-settings.fa.gamePort=Game port
+settings.fa.forceRelay=Force relay connection
 settings.fa.gameLocation=Game location
 settings.fa.executableDecorator=Command line format for executable
 settings.fa.executionDirectory=Execution directory
