--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -192,7 +192,6 @@ game.create.featuredModMissing=Game type is missing
 game.create.failed=Game could not be created.
 game.rehost.failed=Rehosting game failed.
 game.title=Title
-game.startTime=Start time
 game.players=Players
 game.map=Map
 game.rating=Rating
@@ -682,3 +681,4 @@ game.couldNotJoin=Could not join game with id id ''{0}''.
 discord.disallowJoins=Disallow players joining via Discord
 replay.couldNotOpen=Replay with id ''{0}'' , could not be opened.
 error.game.notTerminatedCorrectly=The game did not terminate correctly and has still certain files open. Some files from the installed game could not be copied over to FAF but unless you recently modified game files in the installed version you probably do not care. We are still starting the game for you.
+map.id=#{0}
