Add recommended maps category read from remote preferences
(closes #1282)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -336,6 +336,7 @@ mapVault.upload.playersFormat={0,number,#}
 mapVault.upload.rankedConfirm=I confirm that this map is properly balanced and does not contain prohibited code. I'm aware that a violation results in a ban. Unchecking this results in an unranked map.
 mapVault.upload.retry=Retry
 mapVault.loadingMaps=Loading maps…
+mapVault.recommended=M&M Team Top Picks
 mapVault.mostLikedMaps=Most liked
 mapVault.newestMaps=Most recent
 mapVault.mostPlayed=Most played
