Add combobox to login form to select environment.
The environment is read from the remote preferences file.
(closes #1296)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -273,6 +273,7 @@ ladder.searchPrompt=Search rank or player…
 login.title=FA Forever Login
 login.name=Username
 login.password=Password
+login.environment=Environment
 login.autoLogin=Automatic login
 login.create=Create Account
 login.forgot=Forgot login
@@ -281,6 +282,7 @@ login.button.cancel=Cancel
 login.progress.message=Logging in…
 login.serverHost=Server host
 login.replayServerHost=Replay server host
+login.ircServerHost=IRC server host
 login.apiBaseUrl=API base URL
 
 vault.maps=Maps
