Add email login warning
Adds new warning if user tries to login with username looking like email
Fixes #1295

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -284,6 +284,7 @@ login.serverHost=Server host
 login.replayServerHost=Replay server host
 login.ircServerHost=IRC server host
 login.apiBaseUrl=API base URL
+login.withEmailWarning=Please login with your username and not your email.
 
 vault.maps=Maps
 vault.mods=Mods
