--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -183,7 +183,6 @@ game.host = Hostitel
 game.tooltip.teamTitle = Tým {0} ({1,number,\#})
 game.tooltip.teamTitleNoTeam = Žádný tým
 game.tooltip.observers = Pozorovatelé
-game.protected.symbol = 
 game.join.passwordPrompt = Zadej heslo hry
 game.join.passwordWrong = Špatné heslo
 game.start.couldNotStart = Nepodařilo se spustit hru. Viz chybová zpráva níže.
@@ -194,6 +193,7 @@ game.gameStatus = Stav hry
 game.gameStatus.playing = Hraje
 game.gameStatus.lobby = Čekání na spuštění hry
 game.gameStatus.none = Žádný
+game.id=ID
 game.time = Kdy
 game.duration = Délka
 game.gameType = Typ hry
@@ -566,6 +566,7 @@ userInfo.statistics.errorLoading = Nelze načíst statistiky
 settings.general.unitDatabase = Databáze jednotek
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
+game.player.rating=Jeden z hráčových ratingů
 mapVault.ladder = Ladder mapy
 news.showLadderMaps = Ukázat Ladder mapy
 ranked1v1.showMaps = Ukázat ladder mapy
@@ -602,9 +603,25 @@ tournament.status.closedForRegistration = Uzavřené
 tournament.noStartingDate = Nestanoveno datum zahájení
 tournament.noCompletionDate = ještě nedokončen
 loading = Načítání...
+# Could I have a little more context to this, where its used?
 secondAgo = před {0,number,\#} sekundy
 vault.maps.searchError = Mapy nešly načíst
 settings.notifications.displayNotification = Zobrazit oznámení
 replay.notFoundTitle = Nelze nalézt hru
 replay.replayNotFoundText = Nelze nalézt hru s ID "{0}"
 settings.notifications.afterGameReview = Pozápasová recenze
+tournament.openOnChallonge=Otevřít na challonge.com
+tournament.gameType=Typ hry\:
+tournament.startingAt=Začíná v\:
+tournament.completedAt=Dokončeno v\:
+map.hidden=Schované
+map.hide=Schovat
+map.couldNotHide=Mapu nešlo schovat.
+game.missionName=Mise
+settings.appearance.backgoundImage=Obrázek na pozadí
+settings.appearance.useDefaultImage=Použít výchozí obrázek
+settings.appearance.chooseImage=Vybrat obrázek
+settings.general.theme.useNoImage=Žádný obrázek
+query.notContains=neobsahuje
+coop.unknownMission=Neznámá mise
+game.couldNotJoin=Nelze se připojit do hry s id ''{0}''.
