--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -193,7 +193,6 @@ game.host = Héberger
 game.tooltip.teamTitle = Équipe {0} ({1,number,\#})
 game.tooltip.teamTitleNoTeam = Pas d'équipe
 game.tooltip.observers = Spectateurs
-game.protected.symbol = uF023
 game.join.passwordPrompt = Entrez le mot de passe
 game.join.passwordWrong = Mot de passe incorrect
 game.start.couldNotStart = Impossible de démarrer la partie. Détails ci-dessous.
@@ -205,6 +204,7 @@ game.gameStatus = État de la partie
 game.gameStatus.playing = En jeu
 game.gameStatus.lobby = En attente
 game.gameStatus.none = Aucun
+game.id=ID
 # I would also need context for that one if possible
 # Fuzzy
 game.time = Quand
@@ -314,8 +314,9 @@ mapVault.installButtonFormat = Installer  ({0})
 mapVault.uninstall = Désinstaller
 mod.description = Description
 mod.comments = Commentaires
-map.author = Auteur.e
-map.unknownAuthor = Auteur.e inconnu.e
+map.author=Conception
+# Création anonyme (anonymous creation) instead of Auteur.e Inconnu.e (unknown author) to avoid median point that may hurt reactionaries
+map.unknownAuthor=Création anonyme
 map.name = Nom
 map.description = Description
 map.size = Taille
@@ -534,7 +535,7 @@ mod.detail.size = Taille
 mod.detail.installations = Installations
 mod.detail.version = Version
 mod.detail.dependencies = Dépendances
-map.noDescriptionAvailable = L'auteur n'a pas donné de description
+map.noDescriptionAvailable=Aucun description fournie
 updater.taskTitle = Préparation du jeu
 updater.downloadingFile = Téléchargement {0}
 updater.patchingFile = Application {0}
@@ -549,7 +550,7 @@ userInfo.nameHistory.errorLoading = Impossible de charger les alias
 settings.chat.notifyOnAtMentionOnly = Notifier uniquement lors d'une mention @
 settings.chat.notifications = Notifications
 mod.displayName = Nom
-mod.author = Auteur
+mod.author=Conception
 mod.uploadedDateTime = Envoyé
 mod.updatedDateTime = Mis à jour
 mod.id = ID
@@ -585,6 +586,7 @@ userInfo.statistics.errorLoading = Impossible de charger les statistiques
 settings.general.unitDatabase = Liste des unités
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
+game.player.rating=Niveau d'un des joueurs
 mapVault.ladder = Cartes de la rotation
 news.showLadderMaps = Afficher la rotation actuelle
 ranked1v1.showMaps = Afficher la rotation actuelle
@@ -620,4 +622,33 @@ tournament.status.openForRegistration = Ouvert
 tournament.status.closedForRegistration = Fermé
 tournament.noStartingDate = Pas de date de début
 tournament.noCompletionDate = Pas de date de fin
+loading=Chargement...
+updater.readingFileList=Lecture de la liste des fichiers
+secondAgo=il y a {0,number,\#} secondes
+vault.maps.searchError=Impossible de charger les cartes
 settings.notifications.displayNotification = Afficher les notifications
+replay.notFoundTitle=Partie introuvable
+replay.replayNotFoundText=Partie {0} introuvable
+# What is this ?
+settings.notifications.afterGameReview=Noter la partie
+tournament.openOnChallonge=Ouvrir sur challonge.com
+tournament.gameType=Type de partie \:
+tournament.startingAt=Débutée le \:
+tournament.completedAt=Finie le \:
+mapVault.owned=Cartes possédées
+map.hidden=Cachée
+map.hide=Cacher
+map.unrank=Rendre non-classée
+map.couldNotHide=Impossible de cacher la carte
+map.couldNotUnrank=Impossible de déclasser la carte
+modVersion.ranked=Classée
+game.missionName=Mission
+settings.appearance.backgoundImage=Papier peint
+settings.appearance.useDefaultImage=Image par défaut
+settings.appearance.chooseImage=Choisir l'image
+settings.general.theme.useNoImage=Pas d'image
+query.notContains=ne contient pas
+coop.unknownMission=Mission inconnue
+game.couldNotJoin=Impossible de rejoindre "{0}"
+discord.disallowJoins=Empêcher de rejoindre par discord
+replay.couldNotOpen=La rediffusion {0} n'a pas pu être chargée
