--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -9,7 +9,7 @@ dismiss = Скрыть
 errorTitle = О нет\!
 bytesProgress = {0} из {1}
 messageFromServer = Сообщение от сервера
-more = Больше
+more=Еще
 searchResult = Результаты поиска
 # is it a verb, or a noun?
 search = Поиск
@@ -31,18 +31,18 @@ menu.revealLogFolder = Открыть папку с логами
 menu.revealModFolder = Открыть папку с модами
 main.community.news = Новости
 main.chat = Чат
-main.play = Играть
+main.play=Игры
 # Все же рекомендуется брать боле понятные термины типа "Мастерская" как использовано в Steam
 main.vault = Хранилище
 main.units = Юниты
 main.leaderboards = Рейтинги
-leaderboard.ranked1v1 = Рейтинг 1v1
+leaderboard.ranked1v1=Рейтинговая 1v1
 leaderboard.global = Глобальный рейтинг
 play.custom = Пользовательские игры
-play.ranked1v1 = Ранговая 1v1 
+play.ranked1v1=Ранговая 1v1
 play.coop = Совместная кампания
 leaderboard.failedToLoad = Не удалось загрузить таблицу лидеров
-leaderboard.loading = Загрузка рейтинга 
+leaderboard.loading=Загрузка таблицы лидеров...
 coop.host.title = Хостить эту миссию
 coop.host.button = Хостить игру
 coop.leaderboard = Таблица лидеров
@@ -90,7 +90,7 @@ statusBar.fafConnected = FAF подключено
 statusBar.fafConnecting = Подключаемся к FAF
 statusBar.fafDisconnected = FAF отключено
 # i know it  sais a statusBar so it should not be interactive, but "reconnect" is a verb, an action, so i am bit confused. 
-# that status should indicate that FAF is in the process of reconnecting? or there is a button to reconnect?
+# # that status should indicate that FAF is in the process of reconnecting? or there is a button to reconnect?
 statusBar.reconnect = Переподключиться
 statusBar.taskWithoutMessage.format = {0}
 statusBar.taskWithMessage.format = {0}\: {1}
@@ -110,20 +110,21 @@ chat.userContext.noAvatar = Нет аватара
 chat.userContext.userInfo = Показать информацию о пользователе
 chat.userContext.privateMessage = Личное сообщение
 chat.userContext.removeColor = Убрать выбранный цвет
-chat.userContext.addFriend = Добавить Друга
-chat.userContext.removeFriend = Удалить из Друзей
+chat.userContext.addFriend=Добавить друга
+chat.userContext.removeFriend=Удалить из друзей
 chat.userContext.addFoe = Добавить в противники
 chat.userContext.removeFoe = Убрать из противников
 chat.userContext.viewLiveReplay = Смотреть игру
 chat.userContext.joinGame = Присоединиться к игре
-chat.userContext.viewReplays = Смотреть Реплеи
+chat.userContext.viewReplays=Смотреть реплеи
 chat.userContext.inviteToGame = Пригласить в игру
 chat.userContext.kick = Выбросить
 chat.userContext.ban = Забанить
 chat.sendMessageTask.title = Оправить сообщение
+chat.sendActionTask.title=Отправка действия чата ...
 chat.clanTagFormat = [{0}]
 chat.imageUploadTask.title = Загрузить изображение
-chat.userCount = {0,number,\#} пользователей online
+chat.userCount={0,number,\#} пользователей в сети
 chat.mapName = Карта\: {0}
 chat.filter.filter = Фильтер
 chat.filter.prompt = Поиск по каналу
@@ -141,7 +142,7 @@ clan.visitPage = Посетить сайт клана
 chat.privateMessage.playerLeft = {0} сейчас не в игре
 chat.privateMessage.playerReconnect = {0} сейчас в игре
 chat.privateMessage.globalRating = Глобальный рейтинг
-chat.privateMessage.ladder1v1Rating = Рейтинг 1 на 1
+chat.privateMessage.ladder1v1Rating=Рейтинг 1v1
 chat.privateMessage.ratingFormat = {0,number,\#}
 chat.privateMessage.gamesPlayed = Игр сыграно
 chat.privateMessage.currentlyPlaying = Сейчас играет
@@ -149,10 +150,10 @@ chat.privateMessage.game.players = Игроки
 chat.privateMessage.achievements.unlocked = Достижение получено
 chat.privateMessage.achievements.unlockedFormat = {0,number,\#}/{1,number,\#}
 games.create = Создать игру
-games.create.minRating = Мин.
-games.create.maxRating = Макс.
+games.create.minRating=Минимум
+games.create.maxRating=Максимум
 games.showPasswordProtectedGames = Показать игры защищенные паролем
-games.noGamesAvailable = У вас нет сыгранных матчей. Почему бы Вам не создать одну?
+games.noGamesAvailable=У вас нет сыгранных игр. Почему бы Вам не создать одну?
 games.couldNotJoin = Не удалось подключиться. Смотрите лог ошибок.
 game.create.connecting = Ожидание подключения
 game.create.disconnected = Пожалуйста переподключитесь
@@ -191,7 +192,6 @@ game.host = Хост
 game.tooltip.teamTitle = Команда {0} ({1,number,\#})
 game.tooltip.teamTitleNoTeam = Без команд
 game.tooltip.observers = Наблюдатели
-game.protected.symbol = uF023
 game.join.passwordPrompt = Введите пароль для игры
 game.join.passwordWrong = Неверный пароль
 game.start.couldNotStart = Не удалось запустить игру. Смотрите лог ошибок.
@@ -202,12 +202,14 @@ game.gameStatus = Статус
 game.gameStatus.playing = Играет
 game.gameStatus.lobby = Ожидание старта игры
 game.gameStatus.none = Нет
+game.id=ID
 game.time = Время
 game.duration = Длительность
 game.gameType = Тип игры
 game.startTime = Начало
 game.endTime = Окончание
-game.victoryCondition = Условие победы
+# Need context for this one
+game.validity=game.victoryCondition = Условие победы
 game.player.id = ID игрока
 game.player.username = Имя
 game.player.faction = Фракция
@@ -235,16 +237,16 @@ game.downloadMoreInfo = Загрузить больше информации ({0
 game.watch = Смотреть
 game.watchButtonFormat = Смотреть ({0})
 game.watchDelayedFormat = Наблюдатель в\: {0}
-game.replayFileMissing = Не удалось воспроизвести файл Реплея
+game.replayFileMissing=Не удалось воспроизвести файл реплея
 game.idFormat = \#{0,number,\#}
 game.lineUp = Состав
-featuredMod.displayName = Название Мода
+featuredMod.displayName=Название мода
 featuredMod.technicalName = Короткое название мода
 ladder.searchPrompt = Укажите место или имя
 login.title = Логин FAF
 login.name = Логин
 login.password = Пароль
-login.autoLogin = Запомнить
+login.autoLogin=Автоматический вход
 login.create = Создать аккаунт
 login.forgot = Напомнить логин
 login.button.login = Авторизоваться
@@ -252,22 +254,22 @@ login.button.cancel = Отмена
 login.progress.message = Авторизация
 vault.maps = Карты
 vault.mods = Моды
-vault.onlineReplays = Online Реплеи
-vault.localReplays = Локальные Реплеи
-vault.liveReplays = Live Реплеи
-vault.replays.loading = Загрузка Реплейев
+vault.onlineReplays=Доступные реплеи
+vault.localReplays=Локальные реплеи
+vault.liveReplays=Live реплеи
+vault.replays.loading=Загрузка реплеев
 vault.replays.newest = Новые
 vault.replays.highestRated = С наивысшей оценкой
 vault.replays.displayQuery = Показать поисковый запрос
 vault.replays.queryPrompt = Создайте запрос выше или введите один вручную
-vault.replays.searchError = При поиске Реплейев произошла ошибка.
+vault.replays.searchError=При поиске реплеев произошла ошибка.
 vault.more = Подробнее
 modVault.newestMods = Новые
 modVault.install = Установить
 modVault.uninstall = Удалить
 modVault.installationFailed = Мод ''{0}'' не может быть устанволен\: {1}
 modVault.couldNotDeleteMod = Мод ''{0}'' не может быть удален\: {1}
-modVault.loadingMods = загрузка модов
+modVault.loadingMods=Загрузка модов
 modVault.upload.chooseDirectory = Выбрать папку для модов
 modVault.upload = Загрузить мод
 modVault.upload.title = Отправить мод
@@ -296,10 +298,10 @@ mapVault.upload.players = Игроки
 mapVault.upload.chooseDirectory = Укажите папку карты
 mapVault.upload.sizeFormat = {0,number,\#}км x {1,number,\#}км
 mapVault.upload.playersFormat = {0,number,\#}
-mapVault.upload.rankedConfirm = Я подтверждаю, что эта карта правильно сбалансирована и не содержит запрещенного кода. Я осознаю, что нарушение приведет в моему Бану. Пока карта не пройдет проверку она будет не рейтинговая.
+mapVault.upload.rankedConfirm=Я подтверждаю, что эта карта правильно сбалансирована и не содержит запрещенного кода. Я осознаю, что нарушение приведет к моему бану. Пока карта не пройдет проверку, игра на ней будет не рейтинговая.
 mapVault.upload.retry = Повтор
-mapVault.loadingMaps = Скачка карт
-mapVault.mostLikedMaps = Популярные
+mapVault.loadingMaps=Загрузка карт
+mapVault.mostLikedMaps=Понравившиеся
 mapVault.newestMaps = Новые
 mapVault.mostPlayed = Популярные
 mapVault.installButtonFormat = Установить ({0})
@@ -328,10 +330,10 @@ mapPreview.size = {0,number,\#} x {1,number,\#}
 mapPreview.loadFailure.message = Не удалось загрузить превью карты
 replays.loadingOnlineTask.title = Загрузка online реплеев
 replays.loadingOnlineTask.failed = Online реплеи не могут быть загружены
-replays.loadingLocalTask.title = Загрузка локальных Реплеев
-replays.loadingLocalTask.failed = Локальные Реплеи не могут быть загружены
-replays.live.loadFailure.title = Не удалось загрузить Live Реплеи
-replays.live.loadFailure.message = Не удалось загрузить live Реплей
+replays.loadingLocalTask.title=Загрузка локальных реплеев
+replays.loadingLocalTask.failed=Локальные реплеи не могут быть загружены
+replays.live.loadFailure.title=Не удалось загрузить Live реплеи
+replays.live.loadFailure.message=Не удалось загрузить live реплей
 tutorial.map = Карта
 tutorial.title = Название
 tutorial.length = Длина
@@ -361,18 +363,19 @@ stats.tech1 = T1
 stats.tech2 = T2
 stats.tech3 = T3
 stats.custom = Произвольная
-stats.ranked1v1 = Рейтинг 1 на 1
+stats.ranked1v1=Рейтинг 1v1
 userInfo.general = Общий
 userInfo.statistics = Статистика
 userInfo.ratingGlobal = Глобальный рейтинг
-userInfo.rating1v1 = Рейтинг 1 на 1
+userInfo.rating1v1=Рейтинг 1v1
 userInfo.winLossPerFaction = Поб/Пор за фракцию
+# Techs it is buildings ?
 userInfo.builtByCategory = Построено юнитов
 userInfo.gamesPlayed = Сыграно игр
 userInfo.wins = Побед
 userInfo.losses = Поражений
 userInfo.ratingOverTime = Изменение рейтинга
-userInfo.ratingHistory.1v1 = 1 на 1
+userInfo.ratingHistory.1v1=1v1
 userInfo.ratingHistory.global = Глобальный
 userInfo.achievements = Достижения
 userInfo.tooltipFormat = {0} ({1,number,\#})
@@ -385,16 +388,16 @@ achievements.mostRecent = Новые
 achievements.loading = Загрузка достижений
 achievements.unlocked = Получено ({0,number,\#})
 achievements.locked = Доступно ({0,number,\#})
-replayServer.listeningFailed = Сервер Реплейев не запущен на порт {0,number,\#}
+replayServer.listeningFailed=Сервер реплеев не запущен на порт {0,number,\#}
 replayServer.retry = Повтор
-replayServer.unreachable = Сервер Реплейев недоступен, игра не может быть записана.
+replayServer.unreachable=Сервер реплеев недоступен, игра не может быть записана.
 corruptedMods.notification = Мод поврежден и не может быть загружен\: {0}
 corruptedMods.show = Показать
-corruptedReplayFiles.notification = Были найдены поврежденные файлы Повторов игр. Повторы были перемещены в отдельную папку.
+corruptedReplayFiles.notification=Были найдены поврежденные файлы повторов игр. Повторы были перемещены в отдельную папку.
 corruptedReplayFiles.show = Показать
 mapNotFound = Карта  ''{0}'' не найдена
 replayCouldNotBeStarted = Реплей {0,number,\#} не может быть запущен. Смотри лог ошибок.
-liveReplayCouldNotBeStarted = Live Реплей не может быть запущен. Смотри лог ошибок.
+liveReplayCouldNotBeStarted=Live реплей не может быть запущен. Смотри лог ошибок.
 duration.seconds = {0,number,\#}с
 duration.minutesSeconds = \n{0,number,\#}мин {1,number,\#}с
 duration.hourMinutes = {0,number,\#}ч {1,number,\#}мин
@@ -453,17 +456,17 @@ settings.fa.advanced = Продвинутые
 settings.fa.useDefault = Использовать папку по умолчанию
 settings.fa.chooseDirectory = Выбрать
 settings.general.theme = Тема
-settings.notifications.friendOnline = Друг online
+settings.notifications.friendOnline=Друг в сети
 settings.notifications.friendJoinsGame = Друг присоединился к игре
-settings.notifications.friendPlaysGame = Друг играем матч
-settings.notifications.friendOffline = Друг offline
+settings.notifications.friendPlaysGame=Друг играет матч
+settings.notifications.friendOffline=Друг вышел из сети
 settings.screenFormat = Экран {0,number,\#}
 settings.account = Аккаунт
 settings.account.changePassword = Изменить пароль
 settings.account.currentPassword = Текущий пароль
-settings.account.currentPassword.empty = Текущий пароль не может быть пустым
+settings.account.currentPassword.empty=Поле для текущего пароля не может быть пустым
 settings.account.newPassword = Новый пароль
-settings.account.newPassword.empty = Новый пароль не может быть пустым
+settings.account.newPassword.empty=Поле для нового пароля не может быть пустым
 settings.account.confirmPassword = Подтвердить пароль
 settings.account.confirmPassword.mismatch = Новый пароль и подтверждение не совпадают.
 settings.account.changePassword.changing = Ваш пароль будет изменен.
@@ -476,9 +479,9 @@ settings.account.username = Имя аккаунта FAF
 settings.account.username.change = Изменить имя
 urlPreviewDescription = {0} ({1})
 achievement.unlockedTitle = Достижение получено\!
-friend.nowOnlineNotification.title = {0} теперь online
+friend.nowOnlineNotification.title={0} теперь в сети
 friend.nowOnlineNotification.action = Нажмите здесь, чтобы начать разговор.
-friend.nowOfflineNotification.title = {0} теперь offline
+friend.nowOfflineNotification.title={0} теперь не в сети
 friend.joinedGameNotification.title = {0} присоединился {1}
 friend.joinedGameNotification.action = Нажмите здесь, чтобы присоединиться.
 query.equals = равно
@@ -495,11 +498,11 @@ query.addCriteria = добавить критерий
 query.removeCriteria = удалить критерий
 query.valueHint = значение
 review.send = Отправить отзыв
-review.starsTip.one = Мне совсем не нравиться
-review.starsTip.two = Мне не нравиться
+review.starsTip.one=Мне совсем не нравится
+review.starsTip.two=Мне не нравится
 review.starsTip.three = Хорошо
-review.starsTip.four = Мне нравиться
-review.starsTip.five = Мне очень нравиться 
+review.starsTip.four=Мне нравится
+review.starsTip.five=Мне очень нравится 
 reviews.title = Отзывы
 reviews.myReview = Мой отзыв
 reviews.totalReviewers = {0,number,\#} всего
@@ -558,6 +561,8 @@ tiles.comparator.nameDescending = Сортировать по Названию (
 tiles.comparator.nameAscending = Сортировать по Названию (по возрастанию)
 search.sort.ascending = по возрастанию
 search.sort.descending = по убыванию
+# Need context for this one
+query.contains=содержит
 search.sort = Сортировать по
 vault.mods.searchError = Моды не могут быть загружены
 noDateAvailable = Дата неизвестна
@@ -571,8 +576,50 @@ userInfo.statistics.errorLoading = Не удалось загрузить ста
 settings.general.unitDatabase = Информация о юнитах
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
+# the overall and average rating of all players in the match?
+game.player.rating=Один из рейтингов игрока
 mapVault.ladder = Рейтинговые карты
 news.showLadderMaps = Показать рейтинговые карты
 ranked1v1.showMaps = Показать рейтинговые карты
+port=Порт
+login.serverHost=Хост сервера
+games.showModdedGames=Показать игры с модами
+chat.userContext.copyUsername=Копировать имя
+userInfo.idleTimeFormat=Последний раз заходил\: {0}
+map.playCount=Времени сыграно
+map.numberOfDownloads=Загрузки
+map.versionFormat=версия{0}
+# Need context for this one
 settings.language = Язык
+# Noun
+settings.notifications.toastPreview=Предварительный просмотр
+# Need context for this one
+settings.notifications.toastPreview.text=Вот как это выглядит.
+settings.language.helpUs.text=Downlord's FAF клиент локализуется силами сообщества. Если вы хотите, чтобы клиент был переведен на другой язык, мы будем рады вашей помощи.
+settings.language.helpUs.button=Помогите нам с переводом
+settings.chat.chatFormat=Формат чата
+settings.chat.chatFormat.extended=Расширенный
+settings.chat.chatFormat.compact=Компактный
+game.create.onlyFriends=Видна только друзьям
+unknown=неизвестен
+dateWithTime={0} в {1}
+main.tournaments=Турниры
+tournament.name=Название
+tournament.status.finished=Завершён
+tournament.status.running=Проходит
+tournament.status.openForRegistration=Открыта
+tournament.status.closedForRegistration=Закрыта
+tournament.noStartingDate=дата начала не установлена
+tournament.noCompletionDate=ещё не завершен
+loading=Загрузка...
+updater.readingFileList=Чтение списка файлов
+secondAgo={0,number,\#} секунд назад
+vault.maps.searchError=Карты не могут быть загружены
 settings.notifications.displayNotification = Показывать уведомление
+replay.notFoundTitle=Не удалось найти игру
+replay.replayNotFoundText=Не удалось найти игру с id «{0}».
+settings.notifications.afterGameReview=После игровой обзор
+tournament.openOnChallonge=Открыть на Challonge.com
+tournament.gameType=Тип игры\:
+tournament.startingAt=Начало в\:
+tournament.completedAt=Завершён в\:
