--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -687,4 +687,4 @@ revert.alreadySymlinked=Revert this I got it symlinked
 mapDir.changed.noneAscii=We detected you have a username with special characters and moved your vault directory to fallback location.
 mapDir.changed.unix=We detected you have a unix system and moved your vault directory to fallback location.
 mapDir.changed.oneDrive=We detected you use OneDrive for your documents and moved your vault directory to fallback location.
-settings.use.secondaryVaultLocation=Use Fallback vault location. You want to use this if map/mod downloading has issues and the game doe not find maps/mods.
+settings.use.secondaryVaultLocation=Use Fallback vault location. You want to use this if map/mod downloading has issues and the game does not find maps/mods.
