Remove translation of map size to german
It gets cut off in the client anyway, not showing the size of the map in the preview. the other translations don't have it either.

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -320,7 +320,7 @@ map.height = Höhe
 map.uploadedDateTime = Hinzugefügt
 map.updatedDateTime = Aktualisiert
 mapPreview.name = Kartenname\: {0}
-mapPreview.size = Kartengröße\: {0,number,\#}km x {1,number,\#}km
+mapPreview.size = {0,number,\#}km x {1,number,\#}km
 mapPreview.loadFailure.message = Kartenvorschau konnte nicht geladen werden
 replays.loadingOnlineTask.title = Lade Online-Replays…
 replays.loadingOnlineTask.failed = Online-Replays konnten nicht geladen werden.
