--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -490,7 +490,7 @@ yearAgo={0,number,#} year ago
 yearsAgo={0,number,#} years ago
 settings.appearance=Appearance
 settings.appearance.backgoundImage=Background image
-settings.appearance.useDefaultImage=Use default image
+settings.appearance.useNone=Use no image
 settings.appearance.chooseImage=Choose an image
 settings.languages.restart.message=You changed the language. This requires a restart.
 settings.languages.restart=Restart
