--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -298,6 +298,9 @@ vault.replays.displayQuery=Display search query
 vault.replays.queryPrompt=Build a query above or enter one manually
 vault.replays.searchError=An error has occurred while searching for replays.
 vault.more=More…
+vault.next=Next
+vault.previous=Previous
+vault.currentPage=Page: {0,number,#}
 modVault.newestMods=Most recent
 modVault.highestRated=Highest rated
 modVault.highestRatedUiMods=Recommended UI mods
