Query newest mao gen version
Fixes #1310

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -687,6 +687,7 @@ discord.disallowJoins=Disallow players joining via Discord
 replay.couldNotOpen=Replay with id ''{0}'' , could not be opened.
 error.game.notTerminatedCorrectly=The game did not terminate correctly and has still certain files open. Some files from the installed game could not be copied over to FAF but unless you recently modified game files in the installed version you probably do not care. We are still starting the game for you.
 map.id=#{0}
+mapGenerator.generationFailed=There was an error during map generation
 revert.alreadySymlinked=Revert this I got it symlinked
 mapDir.changed.noneAscii=We detected you have a username with special characters and moved your vault directory to fallback location.
 mapDir.changed.unix=We detected you have a unix system and moved your vault directory to fallback location.
