Check for minimum client version before login and enforce update
fixes #1363

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -279,6 +279,10 @@ login.create=Create Account
 login.forgot=Forgot login
 login.button.login=Login
 login.button.cancel=Cancel
+login.button.downloadUpdate=Download latest release
+login.button.downloadPreparing=Preparing download
+login.button.downloadProgress=Download at {0,number,0%}
+login.clientTooOldError=This client version {0} is too old to proceed. The server requires at least version {1}.  Please update to a more recent version.
 login.progress.message=Logging in…
 login.serverHost=Server host
 login.replayServerHost=Replay server host
