--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -78,7 +78,7 @@ ranked1v1.play=Play
 ranked1v1.cancel=Cancel
 ranked1v1.choseFactions.title=Select factions
 ranked1v1.choseFactions.description=When the match starts, one of your selected factions will be assigned to you.
-ranked1v1.queuePopTimer=Next round in {0,number,0}:{1,number,00}
+ranked1v1.queuePopTimer=Matching in {0,number,0}:{1,number,00}
 ranked1v1.rating.title=Your rating
 ranked1v1.rankingDistribution=Rating distribution
 ranked1v1.rankingDistribution.x=Rating
