--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -29,6 +29,7 @@ userMenu.logOut=Log out
 userMenu.showProfile=Show profile
 
 menu.feedback=Feedback
+menu.discordHelp=Help on Discord
 menu.exit=Exit
 menu.settings=Settings
 menu.revealMapFolder=Reveal map folder
@@ -700,3 +701,12 @@ mapDir.changed.noneAscii=We detected you have a username with special characters
 mapDir.changed.unix=We detected you have a unix system and moved your vault directory to fallback location.
 mapDir.changed.oneDrive=We detected you use OneDrive for your documents and moved your vault directory to fallback location.
 settings.use.secondaryVaultLocation=Use Fallback vault location. You want to use this if map/mod downloading has issues and the game does not find maps/mods.
+help.title=Links Overview
+linksTecHelpDiscord=Technical help on discord
+linksTecHelpForum=Technical help on forum
+linksRules=Rules
+linksModerationReport=Moderation Report Form
+linksDiscord=Discord
+linksFacebook=Facebook
+linksDevNews=Dev News
+linksYoutube=YouTube
